# diraf

./: CMakeLists.txt  README.md  TODO
src/: distributed_rf.cc  distributed_rf.hh  error_functions.cc  error_functions.hh  error_struct.hh  main.cc  test.cc  tree.cc  tree.hh  utils.cc  utils.hh
test/: x_test  x_train  y_test  y_train
